# HexViewer

./: .gitmodules  Build.sh  CMakeLists.txt  README.md  build_win.bat
.github/workflows/: build.yml
Capstone/: CMakeLists.txt
Capstone/src/: LEB128.h  MCFixedLenDisassembler.h  MCInst.c  MCInst.h  MCInstrDesc.c  MCInstrDesc.h  MCRegisterInfo.c  MCRegisterInfo.h  Mapping.c  Mapping.h  MathExtras.h  SStream.c  SStream.h  cs.c  cs_priv.h  cs_simple_types.h  utils.c  utils.h
Capstone/src/arch/AArch64/: AArch64AddressingModes.h  AArch64BaseInfo.c  AArch64BaseInfo.h  AArch64Disassembler.c  AArch64InstPrinter.c  AArch64InstPrinter.h  AArch64Mapping.c  AArch64Mapping.h
Capstone/src/arch/ARM/: ARMAddressingModes.h  ARMBaseInfo.h  ARMDisassembler.c  ARMInstPrinter.c  ARMInstPrinter.h  ARMMapping.c  ARMMapping.h
Capstone/src/arch/BPF/: BPFConstants.h  BPFDisassembler.c  BPFInstPrinter.c  BPFMapping.c
Capstone/src/arch/EVM/: EVMDisassembler.c  EVMMapping.c  EVMModule.c
Capstone/src/arch/M680X/: M680XDisassembler.c  M680XDisassemblerInternals.h  M680XModule.c
Capstone/src/arch/M68K/: M68KDisassembler.c  M68KInstPrinter.c
Capstone/src/arch/MOS65XX/: MOS65XXModule.c
Capstone/src/arch/Mips/: MipsDisassembler.c  MipsInstPrinter.c  MipsInstPrinter.h  MipsMapping.c  MipsMapping.h  MipsModule.c
Capstone/src/arch/PowerPC/: PPCDisassembler.c  PPCInstPrinter.c  PPCMapping.c  PPCMapping.h  PPCPredicates.h
Capstone/src/arch/RISCV/: RISCVBaseInfo.h  RISCVDisassembler.c  RISCVInstPrinter.c  RISCVInstPrinter.h  RISCVMapping.c  RISCVMapping.h
Capstone/src/arch/SH/: SHDisassembler.c  SHInstPrinter.c
Capstone/src/arch/Sparc/: Sparc.h  SparcDisassembler.c  SparcInstPrinter.c  SparcMapping.c  SparcMapping.h
Capstone/src/arch/SystemZ/: SystemZDisassembler.c  SystemZInstPrinter.c  SystemZMCTargetDesc.c  SystemZMCTargetDesc.h  SystemZMapping.c  SystemZMapping.h  SystemZModule.c
Capstone/src/arch/TMS320C64x/: TMS320C64xDisassembler.c  TMS320C64xInstPrinter.c  TMS320C64xMapping.c  TMS320C64xMapping.h
Capstone/src/arch/TriCore/: TriCoreDisassembler.c  TriCoreInstPrinter.c  TriCoreLinkage.h  TriCoreMapping.c  TriCoreMapping.h  TriCoreModule.h
Capstone/src/arch/WASM/: WASMDisassembler.c  WASMMapping.c  WASMModule.c
Capstone/src/arch/X86/: X86ATTInstPrinter.c  X86BaseInfo.h  X86Disassembler.c  X86Disassembler.h  X86DisassemblerDecoder.c  X86DisassemblerDecoder.h  X86DisassemblerDecoderCommon.h  X86InstPrinter.h  X86InstPrinterCommon.c  X86IntelInstPrinter.c  X86Mapping.c  X86Mapping.h  X86Module.c
Capstone/src/arch/XCore/: XCoreDisassembler.c  XCoreInstPrinter.c  XCoreInstPrinter.h  XCoreMapping.c  XCoreMapping.h  XCoreModule.c
Capstone/src/capstone/: arm64.h  capstone.h  evm.h  m680x.h  mos65xx.h  platform.h  ppc.h  riscv.h  sparc.h  systemz.h  wasm.h  x86.h  xcore.h
Capstone/src/include/: platform.h
Capstone/src/include/capstone/: arm.h  bpf.h  m68k.h  mips.h  sh.h  tms320c64x.h  tricore.h
HexViewer/include/: Resource.h  about.h  imageloader.h  language.h  options.h  render.h  searchdialog.h
HexViewer/include/core/: HexData.h  render.h
HexViewer/include/system/: language.h  resource.h  update.h
HexViewer/include/ui/: about.h  contextmenu.h  darkmode.h  framework.h  menu.h  notification.h  options.h  searchdialog.h
HexViewer/resources/: HexViewer.rc
HexViewer/resources/ui/: HexViewer.rc  RCa16320  RCc16320  RCd16320  RCf16320  RCg16320
HexViewer/src/: HexData.cpp  HexViewer.cpp  about.cpp  contextmenu.cpp  menu.cpp  options.cpp  render.cpp  searchdialog.cpp  update.cpp
HexViewer/src/core/: render.cpp
HexViewer/src/system/: update.cpp
HexViewer/src/ui/: about.cpp  contextmenu.cpp  menu.cpp  notification.cpp  options.cpp  searchdialog.cpp
HexViewerExten/src/: ClassFactory.cpp  dllmain.cpp  pch.cpp
docs/: BUILD.md
include/core/: global.h  hexdata.h  imageloader.h  panelcontent.h  pluginexecutor.h  render.h
include/system/: platform_die.h  platfrom_die.h  resource.h  update.h
include/ui/: about.h  contextmenu.h  menu.h  options.h  pluginmanager.h  plugintypes.h  processdialog.h  searchdialog.h  selectblockdialog.h
plugin examples/: pe_entry.py  x86_disassembler.py
resources/ui/: HexViewer.aps  hexviewer.rc
src/: hexviewer.cpp
src/core/: hexdata.cpp  panelcontent.cpp  pluginexecutor.cpp  render.cpp
src/system/: update.cpp
src/ui/: about.cpp  contextmenu.cpp  menu.cpp  options.cpp  pluginmanager.cpp  processdialog.cpp  searchdialog.cpp  selectblockdialog.cpp
